Fix dead area after a chrome app is started in --mus.

After starting a chrome native app in --mus, the top 33 pixels of the
screen no longer accept mouse input. This was because code that is mash
only (which set the non-client area for a new window) was being run in
all mus contexts, meaning opening an app gave the ash RootWindow a
non-client area.

This was especially bad since a native welcome app is launched on first
login, meaning under --mus, you couldn't interact with the skyline
during your first session.

Bug: 794285
Change-Id: I1dc69dc8fd48fb174ecc1db3198844a74b8a0e44
Reviewed-on: https://chromium-review.googlesource.com/825651
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elliot Glaysher <erg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523922}
Former-commit-id: 1672701ad759a71e686f41179cd21bf7991b7365